# ulti

./: CMakeLists.txt  LICENSE  README.md
libkubler/: CMakeLists.txt  kubler.cc  kubler.h
libulti/: CMakeLists.txt  bids.h  bits.h  cards.cc  cards.h  common.h  engine.cc  engine.h  game_state.cc  game_state.h  macros.h  player.cc  player.h  player_state.cc  player_state.h  rules.cc  rules.h
testbed/: CMakeLists.txt  main.cc  testbed.cc  testbed.h
